--- a/tex/kap-reglemente.tex
+++ b/tex/kap-reglemente.tex
@@ -1,13 +1,21 @@
 \chapter{Reglemente}
 
-I sverige regleras radioanvändningen av Post- och telestyrelsens (PTS)
-bestämmelser och det gäller all radioanvändning. Delar av detta delegeras
-sedan till olika myndigheter exempelvis för marin radio och flygradio. Själva
-utrustningen som får användas för olika typer av radiosändning regleras i
-radioutrustningslagen SFS 2916:392 och det övergripande EU-direktivet
-2014/53/EU.
+Vi tittar på reglementen kring användning av radiofrekvenser och
+utrustning inom Sverige och vilka myndigheter och lagar som styr
+detta. Vi går vidare med PR-radio och amatörradio och det fortfarande
+ganska nya instegscertifikatet i detta kapitel.
+
+\clearpage
 
 \section{Tillståndsfri radio}
+
+I sverige regleras radioanvändningen av Post- och telestyrelsens (PTS)
+bestämmelser och det gäller all radioanvändning. Delar av detta
+delegeras sedan till olika myndigheter exempelvis för marin radio och
+flygradio. Själva utrustningen som får användas för olika typer av
+radiosändning regleras i radioutrustningslagen SFS 2916:392 och det
+övergripande EU-direktivet 2014/53/EU.
+
 
 Det är i undantagsföreskriften du hittar alla villkor som hänger samman med
 tillståndsfri radiosändning. Här står effekter, modulationstyper och
