--- a/tex/kap-teknik.tex
+++ b/tex/kap-teknik.tex
@@ -1,5 +1,12 @@
 \chapter{Teknik}
 
+I teknikkapitlet kommer vi titta på en mängd begrepp som har med
+radioteknik att göra. Det är effekt och brus, beräkning av
+radiohorisont och utbredning och mycket mer i detta kapitel som kan
+vara till nytta för radiooperatören att känna till.
+
+\clearpage
+
 \section{Effekt i dBW och dBm}
 
 Effekter anges i W eller i decibel relaterat till 1 mW (dBm) eller
