--- a/tex/kap-trafik.tex
+++ b/tex/kap-trafik.tex
@@ -1,6 +1,11 @@
 \chapter{Trafik}
 
-I detta kapitel tittar vi närmare på hur radiotrafik bedrivs både för amatörradioband och andra band. Här finns också bokstaveringsalfabeten, både det svenska och det internationella, Q-koder och mycket annat som är radio\-trafik\-relaterat.
+I detta kapitel tittar vi närmare på hur radiotrafik bedrivs både för
+amatörradioband och andra band. Här finns också
+bokstaveringsalfabeten, både det svenska och det internationella,
+Q-koder och mycket annat som är radio\-trafik\-relaterat.
+
+\clearpage
 
 \section{Uppträdande på banden}
 
