--- a/tex/kap-frekvenser.tex
+++ b/tex/kap-frekvenser.tex
@@ -1,38 +1,42 @@
 \chapter{Frekvenslistor}
 
-Här hittar du frekvenslistor för ett stort gäng olika radioanvändare från Marin VHF och MF/HF till kanaler för jakt och kortdistansradio, amatörradiobandplaner, amatörradiofyrar,  med mera.
+Här hittar du frekvenslistor för ett stort gäng olika radioanvändare
+från Marin VHF och MF/HF till kanaler för jakt och kortdistansradio,
+amatörradiobandplaner, amatörradiofyrar, med mera.
 
 \clearpage
 
 \section{Allmänna frekvenser VHF--UHF}
 
-Dessa frekvenser är avsedda för allmänhet eller för de specifika ända\-mål som
-anges i undantagsföreskriften. Det innebär att de kan brukas för de ändamål
-som anges i PTS för\-fatt\-nings\-sam\-ling\-ar och sammanställning över ej
-tillståndspliktiga frekvenser. Observera att du är skyldig att själv
-kontrollera bestämmelserna innan en frekvens brukas.
+Dessa frekvenser är avsedda för allmänhet eller för de specifika
+ända\-mål som anges i undantagsföreskriften. Det innebär att de kan
+brukas för de ändamål som anges i PTS för\-fatt\-nings\-sam\-ling\-ar
+och sammanställning över ej tillståndspliktiga frekvenser. Observera
+att du är skyldig att själv kontrollera bestämmelserna innan en
+frekvens brukas.
 
 Effekten i tabellen är ustrålad effekt PEP om inte annat anges.
 
 \subsection{Jaktfrekvenser 31 MHz}
 % Frekvenser uppdaterade 250428
 
-Frekvenserna på detta band var tidigare till för enbart jakt. I dag är de
-öppna för övrig landmobil trafik och kan nyttjas till fritidskommunikation av
-annat slag.
+Frekvenserna på detta band var tidigare till för enbart jakt. I dag är
+de öppna för övrig landmobil trafik och kan nyttjas till
+fritidskommunikation av annat slag.
 
-Högsta effekt är 5\,W och maximal sändningscykel är 10\% vilket betyder att
-under en timme får man sända maximalt 6 minuter.
+Högsta effekt är 5\,W och maximal sändningscykel är 10\% vilket
+betyder att under en timme får man sända maximalt 6 minuter.
 
-I oktober 2012 utökades de gamla jaktkanalerna med ett antal nya kanaler
-vilket skedde i oktober 2012. De har ingen officiell kanalnumrering eller
-egentlig benämning men jag har valt att numrera upp dem efter de traditionella
-numren med början på 25.
+I oktober 2012 utökades de gamla jaktkanalerna med ett antal nya
+kanaler vilket skedde i oktober 2012. De har ingen officiell
+kanalnumrering eller egentlig benämning men jag har valt att numrera
+upp dem efter de traditionella numren med början på 25.
 
-Kanal 24 har dock tidigare haft en frekvens som inte längre är i bruk, så det
-vore förvirrande att använda den -- den saknas därför i listan. Nya kanaler är
-markerade i listan med asterisk och har fått nummer från kanal 25 och uppåt
-efter frekvens. Detta gör att listan blir en smula oordnad.
+Kanal 24 har dock tidigare haft en frekvens som inte längre är i bruk,
+så det vore förvirrande att använda den -- den saknas därför i
+listan. Nya kanaler är markerade i listan med asterisk och har fått
+nummer från kanal 25 och uppåt efter frekvens. Detta gör att listan
+blir en smula oordnad.
 
 \begin{longtable}{rll|rll}
 	\caption{Jaktfrekvenser 31\,MHz tabell}\\
