--- a/tex/forord.tex
+++ b/tex/forord.tex
@@ -15,6 +15,11 @@ Ett index har skapats med indexering av de olika begreppen i boken så att det
 ska bli enklare att hitta. Denna indexering återfinns längst bak i boken med
 länkar så att man kan klicka sig fram i en PDF.
 
+De svenska morsetecknen har också fått komma med i denna utgåva, det
+är inte så vanligt att folk ägnar sig åt morsesignalering i dag som
+det var en gång i tiden men det hör definitivt till så det ska förstås
+vara med.
+
 Många frekvenslistor har blivit uppdaterade med nya frekvenser, information
 och kanaler, felaktigheter har korrigerats och jag hoppas att det mesta nu
 faktiskt är ganska korrekt!
