--- a/tex/kap-trafik.tex
+++ b/tex/kap-trafik.tex
@@ -503,7 +503,50 @@ sedan fram andra. Tänk på hur du själv skulle vilja att en pile-up på din eg
 station skulle vilja agera. Den gyllene regeln är också alltid lyssna först ---
 sänd sedan!
 
-\clearpage
+\section{Morsekoden}
 
+I dag används telegrafi ytterst sällan i kommersiella sammanhang, en
+gång i tiden var det dock det helt dominerande trafikslaget. I dag är
+det foni eller digitala sändningsmoder som gäller. Men radioamatörer
+använder morse, eller CW som det kallas (Continuous Wave) eftersom det
+bara är en nycklad bärvåg som sänds.
 
+Här kommer en sammanställning av den morse-kod som lärts ut i
+generationer inom det militära för signalister.
 
+\begin{tabular}{llll}
+	Adam    & \MAdam    & Nolla                 & \MNoll         \\
+	Bertil  & \MBertil  & Ett                   & \MEtt          \\
+	Cesar   & \MCesar   & Tvåa                  & \MTva          \\
+	David   & \MDavid   & Trea                  & \MTre          \\
+	Erik    & \MErik    & Fyra                  & \MFyra         \\
+	Filip   & \MFilip   & Femma                 & \MFem          \\
+	Gustav  & \MGustav  & Sexa                  & \MSex          \\
+	Helge   & \MHelge   & Sju                   & \MSju          \\
+	Ivar    & \MIvar    & Åtta                  & \MAtta         \\
+	Johan   & \MJohan   & Nia                   & \MNio          \\
+	Kalle   & \MKalle   &                       &  \\
+	Ludvig  & \MLudvig  & Stop (punkt)          & \MSTOP         \\
+	Martin  & \MMartin  & Kommatecken           & \MKomma        \\
+	Niklas  & \MNiklas  & Frågetecken (?)       & \MFragetecken  \\
+	Olof    & \MOlof    & Bråktecken (/)        & \MBraktecken   \\
+	Petter  & \MPetter  & Bindestreck (--)      & \MBindestreck  \\
+	Quintus & \MQvintus & Sluttecken (+)        & \MSluttecken   \\
+	Rudolf  & \MRudolf  &                       &  \\
+	Sigurd  & \MSigurd  & Repetera              & \MRepetera     \\
+	Tore    & \MTore    & Väntatecken           & \MVanta        \\
+	Urban   & \MUrban   & Avslutningstecken (+) & \MAvslutning   \\
+	Übel    & \MUbel    & Åtskillnadstecken (=) & \MAtskillnad   \\
+	Viktor  & \MViktor  & Felskrivningstecken   & \MFelskrivning \\
+	Wilhelm & \MWilhelm &                       &  \\
+	Xerxes  & \MXerxes  &                       &  \\
+	Yngve   & \MYngve   &                       &  \\
+	Zäta    & \MZata    &                       &  \\
+	Åke     & \MAke     &                       &  \\
+	Ärlig   & \MArlig   &                       &  \\
+	Östen   & \MOsten   &
+\end{tabular}
+
+%\vspace{\baselineskip}
+
+%\morse{sm0uei}
