--- a/rhb.tex
+++ b/rhb.tex
@@ -2,7 +2,7 @@
 % diverse saker här som används i dokumentet %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\TitleText}{Radiohandboken}
-\newcommand{\SubtitleText}{För Sändaramatörer, privatradioanvändare\\
+\newcommand{\SubtitleText}{För sändaramatörer, privatradioanvändare\\
 	och andra radiointresserade}
 \newcommand{\Forfattare}{Täpp-Anders Sikvall}
 \newcommand{\Initialer}{SM5UEI}
@@ -51,7 +51,7 @@
 
 \pagestyle{empty}
 
-\input{tex/morse}
+\input{tex/init-morse}
 
 \newgeometry{bottom=3cm,top=3cm}
 
@@ -71,15 +71,28 @@
 
 \vspace{1 em}
 
-\noindent \Forfattare, \Initialer 
+\noindent \SubtitleText
 
-\noindent Karlholmsbruk 
+\vspace{1 em}
 
 \noindent Version \DokVersion
 
+\noindent ISBN: \ISBN
+
+\vspace{1 em}
+
+\noindent \Forfattare, \Initialer
+
+\noindent \Epostadress
+
+\noindent \Linkhome
+
+\noindent Karlholmsbruk
+
+\vspace{1 em}
+
 \noindent Datum \DokumentDatum
 
-\noindent ISBN: \ISBN
 
 \newpage
 
