--- a/tex/kap-frekvenser.tex
+++ b/tex/kap-frekvenser.tex
@@ -434,33 +434,30 @@ mobilstationen lyssnar på. Exempel: RV48.
 	              &                        &                      &                 &                       & $k=(f-430)/0,0125$   \\ \hline
 \end{tabular}
 
-Eftersom amatörradiobanden ser lite olika ut i olika länder förekommer
-det kanaler i numreringen som inte är tillåtna på vissa ställen. Det
-är därför viktig att kontrollera att man fortfarande följer
-bandplanerna i den region man är.
+Eftersom amatörradiobanden ser lite olika ut i olika länder förekommer det
+kanaler i numreringen som inte är tillåtna på vissa ställen. Det är därför
+viktig att kontrollera att man fortfarande följer bandplanerna i den region
+man är.
 
 \begin{itemize}
-\item I 6\,m bandet finns inga FM-kanaler definierade under 51\,MHz.
-\item För 2\,m-bandet är FM-kanaler endast definierade från 145\,MHz och uppåt.
-\item I 70\,cm-bandet är inga kanaler definierade i intervallet
-  432.000--433.000\,MHz. Observera att startfrekvensen är utanför
-  70\,cm bandplanen i IARU region 1.
+\item I 6\,m bandet finns inga FM-kanaler definierade under 51\,MHz. \item För
+2\,m-bandet är FM-kanaler endast definierade från 145\,MHz och uppåt. \item I
+70\,cm-bandet är inga kanaler definierade i intervallet 432.000--433.000\,MHz.
+Observera att startfrekvensen är utanför 70\,cm bandplanen i IARU region 1.
 \end{itemize}
 
-\textit{OBS!\\ Information om kanalnumreringen för 23\,cm-bandet tas
-  tacksamt mot. Maila mig på anders@sikvall.se om du har korrekt
-  information.}
+\textit{OBS!\\ Information om kanalnumreringen för 23\,cm-bandet tas tacksamt
+mot. Maila mig på anders@sikvall.se om du har korrekt information.}
 
 \subsection{Införande av 12.5\,kHz kanalavstånd}
 
-För ett antal år sedan beslutade man sig att gå mot ett smalare
-kanalraster på VHF och UHF och införde härmed kanalavstånd på 12.5~kHz
-i bandplanerna. Ustrustning med 25~kHz kanalraster är fortsatt
-tillåten och detta är en rekommendation. Vid införandet av detta så
-kom även ett nytt numreringsalternativ för kanalsystemen baserat på en
-basfrekvens (som ibland på svenska band ligger utanför vårt band) och
-därefter numrerade man i ordning för respektive 12.5~kHz steg och
-10~kHz för kortvåg.
+För ett antal år sedan beslutade man sig att gå mot ett smalare kanalraster på
+VHF och UHF och införde härmed kanalavstånd på 12,5~kHz i bandplanerna.
+Ustrustning med 25~kHz kanalraster är fortsatt tillåten och detta är en
+rekommendation. Vid införandet av detta så kom även ett nytt
+numreringsalternativ för kanalsystemen baserat på en basfrekvens (som ibland
+på svenska band ligger utanför vårt band) och därefter numrerade man i ordning
+för respektive 12.5~kHz steg och 10~kHz för kortvåg.
 
 \begin{table}[h]
 \centering
