--- a/tex/kap-teknik.tex
+++ b/tex/kap-teknik.tex
@@ -420,10 +420,10 @@ UKV            & Ultrakortvåg  & 88--108                     & MHz \\
 \caption{ITU-benämningar på radarband mm}
 \end{table}
 
-\subsection{IEEE-benämningar på frekvensband}
+\section{IEEE-benämningar på frekvensband}
 \label{sec:IEEE-benamningar}
 
-\subsubsection{Äldre benämmomgar}
+\subsection{Äldre benämningar}
 
 \begin{table}[H]
 	\centering
@@ -448,7 +448,7 @@ UKV            & Ultrakortvåg  & 88--108                     & MHz \\
 	\caption{Äldre IEEE-benämningar på frekvensband}
 \end{table}
 
-\subsubsection{Nuvarande benämningar}
+\subsection{Nuvarande benämningar}
 
 \begin{table}[H]
 	\centering
@@ -486,7 +486,7 @@ UKV            & Ultrakortvåg  & 88--108                     & MHz \\
 \end{table}
 
 
-\subsection{Egenskaper olika frekvensband}
+\section{Egenskaper olika frekvensband}
 
 För radioamatörer delar man in frekvensbanden i långvåg, mellanvåg, kortvåg,
 VHF, UHF och SHF beroende på frekvens, se tabellen under avsnitt
