--- a/rhb.tex
+++ b/rhb.tex
@@ -93,8 +93,7 @@
 
 \noindent Datum \DokumentDatum
 
-
-\newpage
+\clearpage
 
 %\newgeometry{top=3cm}
 
@@ -111,7 +110,6 @@
 \fancyfoot[LE]{\small \DokVersion}
 \fancyfoot[LO]{\small Radiohandboken}
 
-
 \cfoot{\small \thepage}
 
 \pagestyle{fancy}
@@ -126,11 +124,14 @@
 %%% Innehållsförteckning
 \setcounter{secnumdepth}{5}
 \setcounter{tocdepth}{5}
+
+\newpage
+
 \tableofcontents
 
 \newpage
 
-\setlength{\parskip}{1 ex}
+\setlength{\parskip}{1 em}
 \setlength{\parindent}{0pt}
 
 
