--- a/tex/kap-frekvenser.tex
+++ b/tex/kap-frekvenser.tex
@@ -1,42 +1,46 @@
 \chapter{Frekvenslistor}
 
-Här hittar du frekvenslistor för ett stort gäng olika radioanvändare
-från Marin VHF och MF/HF till kanaler för jakt och kortdistansradio,
+Här hittar du frekvenslistor för ett stort gäng olika radioanvändare från
+Marin VHF och MF/HF till kanaler för jakt och kortdistansradio,
 amatörradiobandplaner, amatörradiofyrar, med mera.
+
+Uppdelningen är gjort mellan så kallade "allmänna frekvenser" som inte kräver
+certifikat eller andra tillstånd samt "amatörradio" som kräver
+amatörradiolicens. Vissa frekvenser listas dock trots de kräver tillstånd som
+exempel marin VHF och MF/HF då dessa kan tänkas ses som av stort
+allmänintresse.
 
 \clearpage
 
 \section{Allmänna frekvenser VHF--UHF}
 
-Dessa frekvenser är avsedda för allmänhet eller för de specifika
-ända\-mål som anges i undantagsföreskriften. Det innebär att de kan
-brukas för de ändamål som anges i PTS för\-fatt\-nings\-sam\-ling\-ar
-och sammanställning över ej tillståndspliktiga frekvenser. Observera
-att du är skyldig att själv kontrollera bestämmelserna innan en
-frekvens brukas.
+Dessa frekvenser är avsedda för allmänhet eller för de specifika ända\-mål som
+anges i undantagsföreskriften. Det innebär att de kan brukas för de ändamål
+som anges i PTS för\-fatt\-nings\-sam\-ling\-ar och sammanställning över ej
+tillståndspliktiga frekvenser. Observera att du är skyldig att själv
+kontrollera bestämmelserna innan en frekvens brukas.
 
 Effekten i tabellen är ustrålad effekt PEP om inte annat anges.
 
 \subsection{Jaktfrekvenser 31 MHz}
 % Frekvenser uppdaterade 250428
 
-Frekvenserna på detta band var tidigare till för enbart jakt. I dag är
-de öppna för övrig landmobil trafik och kan nyttjas till
-fritidskommunikation av annat slag.
+Frekvenserna på detta band var tidigare till för enbart jakt. I dag är de
+öppna för övrig landmobil trafik och kan nyttjas till fritidskommunikation av
+annat slag.
 
-Högsta effekt är 5\,W och maximal sändningscykel är 10\% vilket
-betyder att under en timme får man sända maximalt 6 minuter.
+Högsta effekt är 5\,W och maximal sändningscykel är 10\% vilket betyder att
+under en timme får man sända maximalt 6 minuter.
 
-I oktober 2012 utökades de gamla jaktkanalerna med ett antal nya
-kanaler vilket skedde i oktober 2012. De har ingen officiell
-kanalnumrering eller egentlig benämning men jag har valt att numrera
-upp dem efter de traditionella numren med början på 25.
+I oktober 2012 utökades de gamla jaktkanalerna med ett antal nya kanaler
+vilket skedde i oktober 2012. De har ingen officiell kanalnumrering eller
+egentlig benämning men jag har valt att numrera upp dem efter de traditionella
+numren med början på 25.
 
-Kanal 24 har dock tidigare haft en frekvens som inte längre är i bruk,
-så det vore förvirrande att använda den -- den saknas därför i
-listan. Nya kanaler är markerade i listan med asterisk och har fått
-nummer från kanal 25 och uppåt efter frekvens. Detta gör att listan
-blir en smula oordnad.
+Kanal 24 har dock tidigare haft en frekvens som inte längre är i bruk, så det
+vore förvirrande att använda den -- den saknas därför i listan. Nya kanaler är
+markerade i listan med asterisk och har fått nummer från kanal 25 och uppåt
+efter frekvens. Detta gör att listan blir en smula oordnad.
 
 \begin{longtable}{rll|rll}
 	\caption{Jaktfrekvenser 31\,MHz tabell}\\
@@ -457,7 +461,7 @@ Ustrustning med 25~kHz kanalraster är fortsatt tillåten och detta är en
 rekommendation. Vid införandet av detta så kom även ett nytt
 numreringsalternativ för kanalsystemen baserat på en basfrekvens (som ibland
 på svenska band ligger utanför vårt band) och därefter numrerade man i ordning
-för respektive 12.5~kHz steg och 10~kHz för kortvåg.
+för respektive 12,5~kHz steg och 10~kHz för kortvåg.
 
 \begin{table}[h]
 \centering
@@ -1697,8 +1701,8 @@ Strunta i det och ge scouterna en kul radioupplevelse.
 \caption{Scouters JOTA-frekvenser på HF}
 \end{table}
 
-Normalt aktiveras dessa frekvenser tredje veckoslutet i oktober varje
-år, fredag till söndag. Då kan det vara många klubbar som finns på
-frekvenserna och det är också vanligt att man hör dem på helt andra
-frekvenser. De frekvenser som listas här är inte på något vis de enda
-frekvenser som scouter använder.
+Normalt aktiveras dessa frekvenser tredje veckoslutet i oktober varje år,
+fredag till söndag. Då kan det vara många klubbar som finns på frekvenserna
+och det är också vanligt att man hör dem på helt andra frekvenser. De
+frekvenser som listas här är inte på något vis de enda frekvenser som scouter
+använder.
