--- a/rhb.tex
+++ b/rhb.tex
@@ -1,3 +1,6 @@
+% !TeX encoding = UTF-8
+% !TeX spellcheck = sv_SE
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % diverse saker här som används i dokumentet %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -119,7 +122,7 @@
 
 %	\setlength{\headsep}{1em}2
 
-\cleardoublepage
+\clearpage
 
 %%% Innehållsförteckning
 \setcounter{secnumdepth}{5}
