--- a/tex/forord.tex
+++ b/tex/forord.tex
@@ -1,3 +1,6 @@
+% !TeX encoding = UTF-8
+% !TeX spellcheck = sv_SE
+
 \section*{Förord}
 
 Denna version av radiohandboken innehåller en stor mängt förändringar mot
