--- a/tex/kap-frekvenser.tex
+++ b/tex/kap-frekvenser.tex
@@ -1,3 +1,6 @@
+% !TeX encoding = UTF-8
+% !TeX spellcheck = sv_SE
+
 \chapter{Frekvenslistor}
 
 Här hittar du frekvenslistor för ett stort gäng olika radioanvändare från
