--- a/tex/kap-reglemente.tex
+++ b/tex/kap-reglemente.tex
@@ -1,3 +1,5 @@
+% !TeX encoding = UTF-8
+% !TeX spellcheck = sv_SE
 \chapter{Reglemente}
 
 Vi tittar på reglementen kring användning av radiofrekvenser och
@@ -71,10 +73,10 @@ dokumentet då det faktiskt är ganska intressant.
 
 \subsection{Endast godkända radioapparater}
 
-Radioapparaterna måste ochså vara godkända och CE-märkta för att man ska
-uppfylla villkoren och här blir det ofta en del problem med gråimporterade
-radioapparater från asien som ibland kan ha förskräckligt dåliga sändare. Det är
-straffbart att använda icke godkänd radioutrustning.
+Radioapparaterna måste också vara godkända och CE-märkta för att man ska
+uppfylla villkoren och här blir det ofta en del problem med privatimporterade
+radioapparater från Asien som ibland kan ha förskräckligt dåliga sändare. Det
+är straffbart att använda icke godkänd radioutrustning.
 
 \section{Amatörradio}
 
