--- a/tex/kap-teknik.tex
+++ b/tex/kap-teknik.tex
@@ -1,3 +1,6 @@
+% !TeX encoding = UTF-8
+% !TeX spellcheck = sv_SE
+
 \chapter{Teknik}
 
 I teknikkapitlet kommer vi titta på en mängd begrepp som har med
