--- a/tex/kap-trafik.tex
+++ b/tex/kap-trafik.tex
@@ -1,9 +1,12 @@
+% !TeX encoding = UTF-8
+% !TeX spellcheck = sv_SE
+
 \chapter{Trafik}
 
 I detta kapitel tittar vi närmare på hur radiotrafik bedrivs både för
-amatörradioband och andra band. Här finns också
-bokstaveringsalfabeten, både det svenska och det internationella,
-Q-koder och mycket annat som är radio\-trafik\-relaterat.
+amatörradioband och andra band. Här finns också bokstaveringsalfabeten, både
+det svenska och det internationella, Q-koder och mycket annat som är
+radio\-trafik\-relaterat.
 
 \clearpage
 
@@ -27,17 +30,17 @@ Tänk på vad du säger och att du undviker diskutera ämnen som kan verka
 \textbf{upprörande} eller \textbf{stötande}. Ämnen som bör undvikas är
 \textbf{religion} och livs\-å\-skå\-d\-ni\-ng, \textbf{politisk} ideologi,
 \textbf{ekonomiska} eller \textbf{sociala} frågor m.m. där motparter kan ha
-starka åsikter som inte nödvändigtvis stämmer med dina egna. Radion är inte ett
-agitationsrum för sådana frågor.
+starka åsikter som inte nödvändigtvis stämmer med dina egna. Radion är inte
+ett agitationsrum för sådana frågor.
 
 \textbf{Svordomar}, \textbf{könsord} och liknande undviker vi helt. Språket
-skall vara vårdat men behöver inte vara strikt. Tänk på att din motpart är inte
-den enda som lyssnar utan det finns \textit{andra amatörer som lyssnar},
+skall vara vårdat men behöver inte vara strikt. Tänk på att din motpart är
+inte den enda som lyssnar utan det finns \textit{andra amatörer som lyssnar},
 icke-amatörer som lyssnar, myndigheter som lyssnar och så vidare.
 
-Ha \textbf{förståelse} för att andra kanske inte har dina egna detaljkunskaper,
-professionalism med mera. Agera \textbf{ödmjukt} gentemot andra människor på
-banden.
+Ha \textbf{förståelse} för att andra kanske inte har dina egna
+detaljkunskaper, professionalism med mera. Agera \textbf{ödmjukt} gentemot
+andra människor på banden.
 
 Blir du ändå upprörd, undvik att \emph{agera på det} över huvud taget. Sänd
 inte över annans sändning, s.k. ''gummitumme'', eller stör på annat vis för du
@@ -47,21 +50,21 @@ okunskap eller brist på förståelse}. \textbf{Agera vuxet} i sådana situation
 och jobba för att \textbf{de-eskalera} situationen.
 
 En skicklig amatör \textit{lyssnar mycket innan sändning}. Vi anropar på ett
-korrekt sätt och avslutar på ett korrekt sätt. Vi försöker uppge våra respektive
-signaler på ett \emph{tydligt och läsligt sätt}, i dag finns det en tendens att
-sluddra över signalerna framför allt på 2m och 70cm banden, gör inte
-det. Tydlighet är en vinning i sig.
+korrekt sätt och avslutar på ett korrekt sätt. Vi försöker uppge våra
+respektive signaler på ett \emph{tydligt och läsligt sätt}, i dag finns det en
+tendens att sluddra över signalerna framför allt på 2m och 70cm banden, gör
+inte det. Tydlighet är en vinning i sig.
 
 När någon ny i ringen inträder, räkna upp de deltagande signalerna så att
-personen tydligt får en bild av alla som är med och vem som är på turen före och
-efter hen.
+personen tydligt får en bild av alla som är med och vem som är på turen före
+och efter hen.
 
 Vi pratar inte \textbf{nedvärderande} om personer varesig de är andra amatörer
 eller ej, eller en viss grupp av personer. Vi undviker \textbf{sexuella
-  anspelningar} och vitsar ''\textbf{under bältet}'' liksom allt för
-\textbf{personliga detaljer}. Amatörradion är främst
-för \textbf{tekniska diskussioner} av rent \textbf{privat natur} eller
-av \textbf{allmänt intresse för hobbyn}, tester och prov med mera.
+anspelningar} och vitsar ''\textbf{under bältet}'' liksom allt för
+\textbf{personliga detaljer}. Amatörradion är främst för \textbf{tekniska
+diskussioner} av rent \textbf{privat natur} eller av \textbf{allmänt intresse
+för hobbyn}, tester och prov med mera.
 
 Undvik väldigt \textbf{långa sändningspass}. Ibland händer det saker hos dina
 motstationer som att de får ett viktigt telefonsamtal eller måste springa ut i
